# MathIAWork

./: README.md
AdiFram_CPP/: CMakeLists.txt  Changelog.txt  README.md
AdiFram_CPP/adifram_cpp/: CMakeLists.txt
AdiFram_CPP/adifram_cpp/algorithms/: CMakeLists.txt
AdiFram_CPP/adifram_cpp/algorithms/sorting/src/: InsertionSort.cpp  MergeSort.cpp  SelectionSort.cpp  Sorting.hpp
AdiFram_CPP/app/src/: Main.cpp
